cluster/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: banking-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: banking
spec:
  hosts:
  - "*"
  gateways:
  - banking-gateway
  http:
  - match:
    - uri:
        prefix: /customers
    route:
    - destination:
        host: customer-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /contacts
    route:
    - destination:
        host: contacts-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /tests
    route:
    - destination:
        host: tests-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /testdata
    route:
    - destination:
        host: testdata-service
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend-service
        port:
          number: 80
